@@ -6,3 +6,4 @@
 + Clean up the code and indent it properly.
 + Move all pop-up and menu functions from main.c to menus.c.
 + Use the shipped icon in the display.
++ history structure has to be changed in: main.c, manage.c, history.c
